# Define the axisem executable
FILE(GLOB SOLVER_SRCS "${AXISEM_SOURCE_DIR}/SOLVER/*.f90" "${AXISEM_SOURCE_DIR}/SOLVER/*.F90" "${AXISEM_SOURCE_DIR}/SOLVER/*.c")
ADD_EXECUTABLE(axisem ${SOLVER_SRCS})

# Set compile/link flags for axisem
SET(SOLVER_COMPILER_FLAGS "${SOLVER_COMPILER_FLAGS} -Dsolver")
SET(SOLVER_COMPILER_FLAGS "${SOLVER_COMPILER_FLAGS} ${OpenMP_Fortran_FLAGS}")
IF(NOT MPI_Fortran_FOUND)
    SET(SOLVER_COMPILER_FLAGS "${SOLVER_COMPILER_FLAGS} -Dserial")
ENDIF(NOT MPI_Fortran_FOUND)
TARGET_LINK_LIBRARIES(axisem ${MPI_Fortran_LIBRARIES})
IF(NETCDF_FOUND)
    SET(SOLVER_COMPILER_FLAGS "${SOLVER_COMPILER_FLAGS} -Dunc")
    TARGET_LINK_LIBRARIES(axisem ${NETCDF_LIBRARIES})
ENDIF(NETCDF_FOUND)
SET_TARGET_PROPERTIES(axisem PROPERTIES COMPILE_FLAGS ${SOLVER_COMPILER_FLAGS})
SET_TARGET_PROPERTIES(axisem PROPERTIES LINK_FLAGS ${OpenMP_Fortran_FLAGS})

ADD_SUBDIRECTORY("UTILS")

