
# Define the mesher executable
FILE(GLOB MESHER_SRCS "${AXISEM_SOURCE_DIR}/MESHER/*.f90" "${AXISEM_SOURCE_DIR}/MESHER/*.F90")
ADD_EXECUTABLE(xmesh ${MESHER_SRCS})

# Set compile/link flags for the mesher
SET(MESHER_COMPILER_FLAGS "${MESHER_COMPILER_FLAGS} ${OpenMP_Fortran_FLAGS}")
IF(NETCDF_FOUND)
    SET(MESHER_COMPILER_FLAGS "${MESHER_COMPILER_FLAGS} -Dunc")
    TARGET_LINK_LIBRARIES(xmesh ${NETCDF_LIBRARIES})
ENDIF(NETCDF_FOUND)
SET_TARGET_PROPERTIES(xmesh PROPERTIES LINK_FLAGS ${OpenMP_Fortran_FLAGS})
SET_TARGET_PROPERTIES(xmesh PROPERTIES COMPILE_FLAGS ${MESHER_COMPILER_FLAGS})

